# ads-scraper

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  RESEARCH.md  config.py  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: app.py  lambda_handler.py  models.py  ui.py
cli/: audit.py
core/: engine.py  hook_generator.py  normalizer.py  registry.py  stealth.py  store.py
core/base/: analyzer.py  collector.py  schemas.py
infrastructure/: Makefile  env.json  supabase_schema.sql  template.yaml
infrastructure/events/: audit_test.json
tests/fixtures/: ad_library_empty.json  ad_library_response.json  adyntel_no_ads.json  adyntel_premium.json  adyntel_recently_stopped.json  adyntel_scale_up.json  planning_active.json  planning_expanding.json  planning_none.json  planning_pre_launch.json  portal_quality_planner.json  portal_quality_premium.json  portal_quality_scale_up.json  portal_quality_strong.json  reviews_good.json  reviews_mixed.json  reviews_none.json  reviews_poor.json  site_scanner_high_intent.json  site_scanner_planner.json  site_scanner_premium.json  site_scanner_scale_up.json
tests/unit/: test_analyzers.py  test_collector_ads.py  test_collector_dns.py  test_collector_planning.py  test_collector_portal.py  test_collector_site.py  test_end_to_end.py  test_engine.py  test_normalizer.py  test_registry.py  test_store.py
verticals/proptech/: __init__.py
verticals/proptech/analyzers/: icp_classifier.py  pain_mapper.py
verticals/proptech/collectors/: ad_intelligence.py  dns_headers.py  planning_intel.py  (+3 more)
(+2 files in other folders)
