[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "cli*", "verticals*"]

[project]
name = "gtm-intelligence-engine"
version = "0.1.0"
description = "Digital Sales Forensic Suite — domain-to-pain-audit GTM intelligence engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mangum>=0.19.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "typer>=0.12.0",
    "supabase>=2.5.0",
    "anthropic>=0.28.0",
    "python-whois>=0.9.4",
    "dnspython>=2.6.1",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
audit = "cli.audit:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "UP042", "SIM108", "B904", "E701", "SIM105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
